changes of directoties

--- a/wp-documentation/index.html
+++ b/wp-documentation/index.html
@@ -36,18 +36,18 @@
     <div id="documenter_sidebar">
       <a href="#documenter_cover" id="documenter_logo"></a>
       <ul id="documenter_nav">
-          <li><a class="current" href="#documenter_cover">Start</a></li>
-          <li><a href="#started" title="Getting started">Getting started</a></li>
-          <li><a href="#installation" title="Getting started">Update theme</a></li>
-          <li><a href="#import" title="Import demo content">Import demo content</a></li>
-          <li><a href="#menu" title="Menu">Menu</a></li>
-          <li><a href="#home" title="Homepage">Homepage</a></li>
-          <li><a href="#portfolio" title="Portfolio">Portfolio</a></li>
-          <li><a href="#slider" title="Slider">Slider Revolution</a></li>
-          <li><a href="#theme_options" title="Theme Options">Theme Options</a></li>
-          <li><a href="#faq" title="F.A.Q">F.A.Q</a></li>
-          <li><a href="#support" title="Support">Support</a></li>
-          <li><a href="#source_and_credits" title="Source and Credits">Source and Credits</a></li>
+          <li><a class="current" href="index.html#documenter_cover">Start</a></li>
+          <li><a href="index.html#started" title="Getting started">Getting started</a></li>
+          <li><a href="index.html#installation" title="Getting started">Update theme</a></li>
+          <li><a href="index.html#import" title="Import demo content">Import demo content</a></li>
+          <li><a href="index.html#menu" title="Menu">Menu</a></li>
+          <li><a href="index.html#home" title="Homepage">Homepage</a></li>
+          <li><a href="index.html#portfolio" title="Portfolio">Portfolio</a></li>
+          <li><a href="index.html#slider" title="Slider">Slider Revolution</a></li>
+          <li><a href="index.html#theme_options" title="Theme Options">Theme Options</a></li>
+          <li><a href="index.html#faq" title="F.A.Q">F.A.Q</a></li>
+          <li><a href="index.html#support" title="Support">Support</a></li>
+          <li><a href="index.html#source_and_credits" title="Source and Credits">Source and Credits</a></li>
       </ul>
       <div id="documenter_copyright">Copyright DankovThemes 2018<br>made with the <a href="http://rxa.li/documenter">Documenter v2.0</a></div>
     </div>
